Gizmos don't work in Edit Mode #79945

Closed
opened 2020-08-20 12:40:40 +02:00 by William Reynish · 14 comments

System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.16

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 09:54, hash: 59180ff153
Worked: 2.90 beta
Worked: 2.83
Caused by adca09b643

Short description of error
In Edit Mode, you cannot interact with gizmos

Exact steps for others to reproduce the error

  • Start Blender with default settings
  • With the default cube selected, enter Edit Mode
  • Enable the Move tool and select an element (or use Select All)
  • Click and drag on the move gizmo handles
  • The dragging on the gizmos will fall through and Blender will perform a box selection instead

{F8796473, size=full}

**System Information** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.16 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 09:54, hash: `59180ff153` Worked: 2.90 beta Worked: 2.83 Caused by adca09b643 **Short description of error** In Edit Mode, you cannot interact with gizmos **Exact steps for others to reproduce the error** - Start Blender with default settings - With the default cube selected, enter Edit Mode - Enable the Move tool and select an element (or use Select All) - Click and drag on the move gizmo handles - The dragging on the gizmos will fall through and Blender will perform a box selection instead {[F8796473](https://archive.blender.org/developer/F8796473/Screenshot_2020-08-20_at_12.37.57.png), size=full}

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @sharaths21312

Added subscriber: @sharaths21312
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I cannot reproduce this one.
I assume this is related to {#79811}?

I cannot reproduce this one. I assume this is related to {#79811}?

I can reproduce this in blender 2.91 940b239ad4 for windows.

I can reproduce this in blender 2.91 940b239ad473 for windows.

@lichtwerk It's possible that it is related. Although there appears to be no display issue for gizmos, so there is no clear relation between those two issues, other than the fact they both occur in Edit Mode here on macOS.

@lichtwerk It's possible that it is related. Although there appears to be no display issue for gizmos, so there is no clear relation between those two issues, other than the fact they both occur in Edit Mode here on macOS.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Actually... I can confirm now.

Asserts for me:

BLI_assert failed: /blender/source/blender/editors/screen/glutil.c:127, immDrawPixelsTexScaled_clipping(), at '!"Incompatible format passed to immDrawPixels"'

Can bisect in a bit...

Actually... I can confirm now. Asserts for me: ``` BLI_assert failed: /blender/source/blender/editors/screen/glutil.c:127, immDrawPixelsTexScaled_clipping(), at '!"Incompatible format passed to immDrawPixels"' ``` Can bisect in a bit...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Caused by adca09b643

CC @fclem

Caused by adca09b643 CC @fclem

Added subscriber: @CobraA

Added subscriber: @CobraA

on windows it locks blender completely when enabling the transform tools, both object & edit mode.

on windows it locks blender completely when enabling the transform tools, both object & edit mode.

This issue was referenced by 5f414234dd

This issue was referenced by 5f414234ddea6815136b1cae8eb309ee2b67b172

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-20 17:03:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79945
No description provided.