GPUState: Use state setters inside selection code

This fixes T79945 Gizmos don't work in Edit Mode